--- a/css/style.css
+++ b/css/style.css
@@ -130,10 +130,6 @@ main {
   margin-top: 40px;
 }
 
-.section-bottom-images {
-  text-align: center;
-}
-
 .email-me__button {
   color: #fff;
   background-color: #74cfae;
@@ -149,6 +145,7 @@ main {
 
 .article-container__text {
   text-align: center;
+  color: #333;
 }
 
 .section-bottom {
@@ -163,6 +160,10 @@ main {
   padding-bottom:70px;
   font-size: 24px;
   color: #fff;
+  text-align: center;
+}
+
+.section-bottom-images {
   text-align: center;
 }
 
